# andweorc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  clippy.toml  deny.toml  prog.c  rust-toolchain.toml
.beads/: issues.jsonl
.cargo/: config.toml
.githooks/: commit-msg  pre-commit  pre-push  setup.sh
andweorc/: Cargo.toml  README.md
andweorc-macros/: Cargo.toml
andweorc-macros/src/: lib.rs
andweorc/benches/: core_ops.rs
andweorc/examples/: barrier_phases.rs  collatz.rs  lock_contention.rs  map_comparison.rs  parallel_reduce.rs  perf_debug.rs  pipeline_stages.rs  regex_workload.rs  self_profile.rs  simple_profile.rs  sorting_comparison.rs
andweorc/include/: andweorc.h
andweorc/src/: experiment.rs  ffi.rs  json_output.rs  lib.rs  lock_util.rs  per_thread.rs  posix.rs  progress_point.rs  runner.rs  timer.rs  validate.rs
andweorc/src/posix/: pthread.rs  real.rs  signal.rs  trigger.rs
andweorc/tests/: causal_validation.rs  ld_preload_integration.rs  loom_sample_counts.rs  stress_tests.rs  throughput_accuracy.rs
cargo-andweorc/: Cargo.toml
cargo-andweorc/src/: main.rs
ci/: check  clippy  deny  fmt  kani  outdated  shellcheck  test  validate
examples/: .gitignore  README.md
examples/c/: Makefile  barrier_sync.c  cache_contention.c  cache_contention_coz.c  dedup_hash.c  producer_consumer.c  signal_trigger.c
examples/go/: go.mod  http_contention.go  pool_contention.go
