[package]
name = "andweorc"
version = "0.1.0"
edition = "2021"
description = "A causal profiler for Rust programs"
license = "MIT"
publish = false

[lib]
crate-type = ["lib", "dylib"]
doctest = false

[dependencies]
nix = { version = "0.23", default-features = false }
spin = { version = "0.9", default-features = false, features = ["once"] }
libc = { version = "0.2", default-features = false }
libc-print = { version = "0.1", default-features = false }
signal-hook = { version = "0.3", default-features = false }
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
perf-event = { git = "https://github.com/blt/perf-event", branch = "main", default-features = false }
andweorc-macros = { path = "../andweorc-macros" }
backtrace = { version = "0.3", default-features = false, features = ["std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }

[dev-dependencies]
proptest = "1.4"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
criterion = { version = "0.5", default-features = false }
loom = "0.7"

[[bench]]
name = "core_ops"
harness = false

[lints]
workspace = true
