[package]
name = "cargo-andweorc"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for the andweorc causal profiler"
license = "MIT"
publish = false

[[bin]]
name = "cargo-andweorc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
object = { version = "0.32", default-features = false, features = ["read", "elf", "std"] }
addr2line = "0.21"
memmap2 = "0.9"

[lints]
workspace = true
